# HAR-System-MLT-

./: .gitignore  README.md  README_CN.md  pyproject.toml  requirements.txt
data/: README.md
notebooks/: Source_code.ipynb  source_code_export.py
scripts/: prepare_data.py  run_all.py  run_cnn.py  run_kmeans.py  run_random_forest.py
src/har_mlt/: __init__.py  cli.py  config.py  data.py  evaluation.py  features.py  visualization.py
tests/: test_smoke.py
